# eventscope

./: .gitignore  Cargo.toml  README.md
docker/clickhouse-kafka/: docker-compose.yaml
eventscope/: Cargo.toml  Data.xml  README.md  pom.xml
eventscope/docker/clickhouse-kafka/: docker-compose.yaml
eventscope/docker/clickhouse-kafka/config/: clickhouse_metrika.xml  users.xml
eventscope/src/: main.rs
eventscope/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
eventscope/src/main/java/io/eventscope/api/: Event.java  EventScopeResource.java  EventScopeService.java
eventscope/src/main/java/io/eventscope/api/event/: Constant.java
eventscope/src/main/java/io/eventscope/clickhouse/: ClickhouseRepository.java
eventscope/src/main/java/io/eventscope/clickhouse/engine/: CollapsingMergeTree.java  Distributed.java  Engine.java  EngineFamily.java  InputFormat.java  MergeTreeEngine.java  ReplacingMergeTree.java  ReplicationSchema.java
eventscope/src/main/resources/: application-dev.yaml  application.yaml
eventscope/src/test/java/: ClickhouseTestResourceLifecycleManager.java  Constant.java  KafkaTestResourceLifecycleManager.java  TestKafkaInjection.java
eventscope/src/test/java/dependency/: ClickhouseTestResourceLifecycleManager.java  KafkaTestResourceLifecycleManager.java  ZookeeperTestResourceLifecycleManager.java
eventscope/src/test/java/util/: XMLParser.java
eventscope/src/test/resources/: application.yaml
eventscope/src/test/resources/clickhouse/config/: clickhouse_config.xml  clickhouse_metrika.xml
(+64 files in other folders)
