[package]
name = "eventscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
clickhouse-rs = "1.0.0-alpha.1"
time = { version = "0.3.17", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
big_s = "1.0.2"
flatten-serde-json = "0.1.0"